<resources>
    <string name="app_name">UI_Demo</string>
    <string name="MainActivityTitle">Profile</string>
    <string name="titleText">Hi Nishant</string>
    <string name="subTitleText">Here are your projects</string>
    <string name="ratingTitle">Rate My App</string>
    <string name="check_permission">Check Permission</string>
    <string-array name="array_technology">
        <item>Android</item>
        <item>Java</item>
        <item>Php</item>
        <item>Hadoop</item>
        <item>Sap</item>
        <item>Python</item>
        <item>Ajax</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>.Net</item>
        <item>Perl</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment_1">fragment 1</string>
    <string name="hello_blank_fragment_2">fragment 2</string>
    <string name="press">Increase</string>
    <string name="_91_7777909302">+91 7777909302</string>
    <string name="nishant_gmail_com">nishant@gmail.com</string>
    <string name="hii_nishant_sanandiya">Hii , Nishant Sanandiya</string>
    <string name="button_3">Button 3</string>
    <string name="button_2">Button 2</string>
    <string name="button_4">Button 4</string>
    <string name="button_1">Button 1</string>
    <string name="notification_title">Service running</string>
    <string name="notification_message">Service uses user location</string>
    <string name="ticker_text">Ticker Text</string>
    <string name="CHANNEL_DEFAULT_IMPORTANCE">NotificationChannelId</string>
    <string name="retry">Retry</string>
    <string name="service_activity">Service Activity</string>
    <string name="api_activity">API Activity</string>
    <string name="start_foreground_intent_service">Start Foreground Intent Service</string>
    <string name="stop_foreground_intent_service">Stop Foreground Intent Service</string>
    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>
    <string name="enter_text">Enter text</string>
    <string name="send_to_service">Send To Service</string>
    <string name="message_lock_running">message_lock_running</string>
    <string name="go_to_broadcast_demo">Go to BroadCast Demo</string>
    <string name="send_broadcast_message">Send Broadcast message</string>
    <string name="go_to_dialog_activity">Go To Dialog Activity</string>
    <string name="show_alert">Show Alert</string>
    <string name="ok">CLOSE</string>
    <string name="texto">Hey</string>
    <string name="help">Help</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="click_for_more">Click For More</string>
    <string name="activity">Activity</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_default_drawer">Default_Drawer</string>
    <string name="press_for_more">Press For More</string>
    <string name="title_activity_tab">Tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_drawer">GO TO Drawer</string>
    <string name="enter_your_username">Enter your UserName</string>
</resources>