<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/man" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="@dimen/margin_20"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/hii_nishant_sanandiya"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="@dimen/margin_20"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/hii_nishant_sanandiya"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="@dimen/margin_20"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:text="@string/hii_nishant_sanandiya"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_20"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/man" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/hii_nishant_sanandiya"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/nishant_gmail_com"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/_91_7777909302"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="API Activity"
        android:layout_marginVertical="@dimen/margin_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toTopOf="@+id/ScrollView"
        />
    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonx">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="GO TO NEXT PAGE"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_2"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_3"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_4"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_1"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 2"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 3"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 4"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 1"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 2"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 3"
                android:textColor="@color/black" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button 4"
                android:textColor="@color/black" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>